aksmigrate/test/e2e/manifests/scenario4-lb-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: e2e-lb-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
