aksmigrate/test/e2e/manifests/scenario4-lb-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-lb-ingress
  labels:
    aksmigrate-e2e: "true"
