aksmigrate/test/e2e/manifests/scenario4-lb-ingress/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  namespace: e2e-lb-ingress
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
